# ez-rent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Unawatuna_2_1_300_basic/: Unawatuna_2_1_300_basic_scaler_X.joblib  tf_model.keras  (+1 more)
server/: .gitignore  cli.py  main.py  pyproject.toml  server.py
server/Unawatuna_2_1_300_basic/: Unawatuna_2_1_300_basic_meta.joblib
server/app/: core_logic.py
server/app/prediction/: feature_engineering.py  model_loader.py  model_predictor.py
server/app/prediction/model_utils/: get_model_metadata_path.py
server/app/prediction/training/: advanced_trainer.py  basic_trainer.py
server/app/scrapers/booking_com/: utils.py
server/app/scrapers/booking_com/actions/: extract_facility_group.py
server/app/scrapers/booking_com/extractors/: hotel_details_extractor.py  scrape_properties_data.py  specific_property_extractor.py
server/app/scrapers/booking_com/navigation/: goto_properties_page.py
server/app/scrapers/booking_com/orchestrator/: scrape_booking_com_data.py  scrape_general_data.py
server/app/scrapers/booking_com/parsers/: extract_float_value.py
server/app/utils/: constants.py  logger.py  scraped_data_loader.py
server/app/utils/cache/: cache_url.py  hotel_cache.py
server/app/utils/file_io/: save_hotel_detail_data_to_csv.py  save_scraped_data_to_csv.py
server/scraped/: urls.csv
server/scraped/hotel_details/Unawatuna/2/1/: limit_100.csv
server/scraped/properties/Unawatuna/2/1/: limit_300.csv
server/server/: schemas.py  utils.py
server/server/api/: cache.py  predictions.py  properties.py
(+52 files in other folders)
