[project]
name = "ez-rent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "loguru",
    "fastapi[standard]>=0.128.0",
]
